LRQA-19777 SiteMap TestPlan

--- a/test.properties
+++ b/test.properties
@@ -1105,7 +1105,8 @@
         Web Content Administration,\
         Web Content Display,\
         Web Search,\
-        XSL
+        XSL,\
+        Site Map
 
 ##
 ## Product Names
